(lang dune 3.11)

(name adventofcode2023)

(generate_opam_files true)

(source
 (github crazymerlyn/adventofcode2023))

(authors "CrazyMerlyn")

(maintainers "CrazyMerlyn")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name adventofcode2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
